[package]
name = "carbon"
description = "Carbon"
version = "0.1.0"
authors = ["Andrii Radyk <ander.ender@gmail.com>"]
license = "MIT"
repository = "https://github.com/GiantPlantsSociety/graphite-rs"
edition = "2018"

[dependencies]
failure = "0.1.5"
lazy_static = "1"
regex = "1"
structopt = "0.2"
whisper = { path = "../whisper" }
