[package]
name = "diamond-api"
description = "Diamond Web API, subset of Graphite Web API"
version = "0.1.0"
authors = ["Andrii Radyk <ander.ender@gmail.com>", "Andrey Kutejko <andy128k@gmail.com>"]
license = "MIT"
repository = "https://github.com/GiantPlantsSociety/diamond"
edition = "2018"

[dependencies]
actix-web = { version = "3", default-features = false, features = ["compress"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
structopt = "0.3"
tempfile = "3"
env_logger = "0.9"
futures = "0.3"
whisper = { path = "../whisper" }
nom = "6"
chrono = "0.4"
actix-rt = "1"
regex = "1"
