[package]
name = "diamond-api"
description = "Diamond Web API, subset of Graphite Web API"
version = "0.1.0"
authors = ["Andrii Radyk <ander.ender@gmail.com>", "Andrey Kutejko <andy128k@gmail.com>"]
license = "MIT"
repository = "https://github.com/GiantPlantsSociety/diamond"
edition = "2018"

[dependencies]
actix-web = "4.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
structopt = "0.3"
tempfile = "3"
env_logger = "0.10"
futures = "0.3"
whisper = { path = "../whisper" }
nom = "7"
chrono = "0.4"
actix-rt = "2"
regex = "1"
