[package]
name = "diamond"
description = "Diamond"
version = "0.1.0"
authors = ["Andrii Radyk <ander.ender@gmail.com>"]
license = "MIT"
repository = "https://github.com/GiantPlantsSociety/diamond"
edition = "2018"

[dependencies]
failure = "0.1"
lazy_static = "1"
regex = "1"
structopt = "0.3"
tokio = "0.1"
futures = "0.3"
config = "0.9"
serde = { version = "1", features = ["derive"] }
whisper = { path = "../whisper" }

[dev-dependencies]
tempfile = "3"
