[package]
name = "diamond"
description = "Diamond"
version = "0.1.0"
authors = ["Andrii Radyk <ander.ender@gmail.com>"]
license = "MIT"
repository = "https://github.com/GiantPlantsSociety/diamond"
edition = "2018"

[dependencies]
lazy_static = "1"
regex = "1"
structopt = "0.3"
tokio = { version = "1.12", features = ["full"] }
tokio-util = { version = "0.3", features = ["codec", "udp"] }
futures = "0.3"
config = "0.10"
serde = { version = "1", features = ["derive"] }
whisper = { path = "../whisper" }

[dev-dependencies]
tempfile = "3"
