[package]
name = "graphite-api"
description = "Graphite API"
version = "0.1.0"
authors = ["Andrii Radyk <ander.ender@gmail.com>"]
license = "MIT"
repository = "https://github.com/GiantPlantsSociety/graphite-rs"

[dependencies]
failure = "0.1.1"
actix = "0.5"
actix-web = "0.5"
serde = "1"
serde_json = "1"
serde_derive = "1"
serde_urlencoded = "0.5"
structopt = "0.2"
walkdir = "2.1.4"
tempfile = "3.0.2"
whisper = { path = "../whisper" }
