[package]
name = "graphite-api"
description = "Graphite API"
version = "0.1.0"
authors = ["Andrii Radyk <ander.ender@gmail.com>"]
license = "MIT"
repository = "https://github.com/GiantPlantsSociety/graphite-rs"
edition = "2018"

[dependencies]
failure = "0.1"
actix-web = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.5"
structopt = "0.2"
tempfile = "3"
glob = "0.3"
env_logger = "0.6"
futures = "0.1"
whisper = { path = "../whisper" }
