[package]
name = "whisper"
version = "0.1.0"
authors = ["Andrey Kutejko <andrey.kutejko@sizmek.com>"]
license = "MIT"
repository = "https://github.com/GiantPlantsSociety/graphite-rs"

[dependencies]
regex = "1"
lazy_static = "1"
byteorder = "1"
failure = "0.1.1"
libc = "0.2"
structopt = "0.2"
chrono = "0.4"
serde_json = "1"
serde = "1"
serde_derive = "1"
walkdir = "2.1.4"
humansize = "1.1.0"
