[package]
name = "whisper"
version = "0.1.0"
authors = ["Andrey Kutejko <andrey.kutejko@sizmek.com>"]
license = "MIT"
repository = "https://github.com/GiantPlantsSociety/diamond"
edition = "2018"

[dependencies]
regex = "1"
lazy_static = "1"
byteorder = "1"
libc = "0.2"
structopt = "0.3"
chrono = "0.4"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
walkdir = "2"
humansize = "1.1.0"

[dev-dependencies]
assert_cmd = "1.0"
predicates = "2"
tempfile = "3"
unindent = "0.1"
