[package]
name = "whisper"
version = "0.1.0"
authors = ["Andrey Kutejko <andrey.kutejko@sizmek.com>"]
license = "MIT"
repository = "https://github.com/GiantPlantsSociety/diamond"
edition = "2024"

[dependencies]
regex = "1"
lazy_static = "1"
byteorder = "1"
libc = "0.2"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
walkdir = "2"
humansize = "2"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3"
tempfile = "3"
unindent = "0.2"
