[package]
name = "whisper_tests"
description = "Bench/Test suite for whisper crate"
version = "0.1.0"
authors = ["Vladyslav Boridko <vboridko@gmail.com>"]
license = "MIT"
repository = "https://github.com/GiantPlantsSociety/graphite-rs"

[dependencies]
whisper = { path = "../whisper" }
rand = "0.5.3"
tempfile = "3.0.4"
byteorder = "1"
failure = "0.1"

[[bench]]
name = "tests"
harness = false

[dev-dependencies]
bencher = "0.1.5"

