[package]
name = "whisper_tests"
description = "Bench/Test suite for whisper crate"
version = "0.1.0"
authors = ["Vladyslav Boridko <vboridko@gmail.com>"]
license = "MIT"
repository = "https://github.com/GiantPlantsSociety/diamond"
edition = "2018"

[dependencies]
whisper = { path = "../whisper" }
rand = "0.7"
tempfile = "3"
byteorder = "1"
failure = "0.1"
#tokio = "0.2"

[[bench]]
name = "tests"
harness = false

[dev-dependencies]
bencher = "0.1.5"
futures = "0.3"

