[package]
name = "whisper_tests"
description = "Bench/Test suite for whisper crate"
version = "0.1.0"
authors = ["Vladyslav Boridko <vboridko@gmail.com>"]
license = "MIT"
repository = "https://github.com/GiantPlantsSociety/diamond"
edition = "2024"

[dependencies]
whisper = { path = "../whisper" }
rand = "0.9"
tempfile = "3"
byteorder = "1"

[[bench]]
name = "tests"
harness = false

[dev-dependencies]
bencher = "0.1.5"
